# huolala-price-quote-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  一键启动查价工具.bat  使用说明.md  启动查价工具.bat  打开查价工具网页.hta
config/: vehicle_rules.csv  vehicle_rules.json
configs/: site.huolala.json
docs/: USER_DELIVERY_WORKFLOW.md
huolala_quote_tool/: __init__.py  app.py  browser.py  excel_model.py  parsers.py  paths.py
scripts/: build_bootstrapper_exe.ps1  build_portable_zip.ps1  build_windows_portable.py  prepare_portable_runtime.ps1  run_batch_once.py  simulate_recorded_sample.py  smoke_portable.ps1
src/price_quote_tool/: __init__.py  automation.py  excel_io.py  models.py  runner.py  server.py  site_config.py
src/price_quote_tool/static/: app.js  index.html  styles.css
tests/: test_automation_modal.py  test_excel_io.py  test_excel_model.py  test_runner_fake.py
tests/fixtures/: mock_quote_page.html
