[project]
name = "price-quote-tool"
version = "0.1.0"
description = "Portable local batch price quote tool for Excel and Huolala web pages."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1",
  "playwright>=1.44",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
price_quote_tool = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
